--- a/Kaiserreich Korean Translation/localisation/KR_Russia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Russia_l_english.yml
@@ -56,25 +56,25 @@ RUS_incorporate_armenia:0 "주식회사 설립"
 RUS_puppet_armenia:0 "우리를 괴뢰국화하다"
 RUS_puppet_armenia_declined:0 "우리의 통제에 저항하다"
 RUS_back_down_ARM:0 "아르메니아에서의 퇴각"
-RUS_joined_GER_concau1:0 "Asked to join Germany against the Syndicalists for concessions"
-RUS_joined_GER_concau2:0 "Asked to join Germany against the Syndicalists for concessions"
-RUS_joined_GER_concau3:0 "Asked to join Germany against the Syndicalists for concessions"
-RUS_joined_GER_concau4:0 "Asked to join Germany against the Syndicalists for concessions"
-GER_accepted_concessions_RUS1:0 "독일은 양보를 허용했다"
-GER_accepted_concessions_RUS2:0 "독일은 양보를 허용했다"
+RUS_joined_GER_concau1:0 "양보를 대가로 독일의 생디칼리스트 전선 참여를 제안"
+RUS_joined_GER_concau2:0 "양보를 대가로 독일의 생디칼리스트 전선 참여를 제안"
+RUS_joined_GER_concau3:0 "양보를 대가로 독일의 생디칼리스트 전선 참여를 제안"
+RUS_joined_GER_concau4:0 "양보를 대가로 독일의 생디칼리스트 전선 참여를 제안"
+GER_accepted_concessions_RUS1:0 "독일은 양보를 수락했다"
+GER_accepted_concessions_RUS2:0 "독일은 양보를 수락했다"
 GER_refused_concessions_RUS1:0 "독일은 양보를 거부했다"
 GER_refused_concessions_RUS2:0 "독일은 양보를 거부했다"
 RUS_declared_war_GER_concau:0 "우리에게 전쟁 선포"
-RUS_ignored_guarantees_GER_concau:0 "우리의 보증을 무시하다"
+RUS_ignored_guarantees_GER_concau:0 "우리의 독립 보장을 무시하다"
 GER_betrayal_concau:0 "독일이 우리를 배신하다!"
 RUS_middle_east_focus1:0 "중동 방향"
 RUS_middle_east_focus2:0 "중동 방향"
 RUS_protect_persia_accept:0 "보호를 수락"
 RUS_protect_persia_declined:0 "보호를 거절"
-RUS_back_down_PER:0 "페르시아에서 패배를 인정"
-RUS_greater_armenia_accept:0 "대 아르메니아령"
-RUS_greater_armenia_declined:0 "대 아르메니아령 거부되다"
-RUS_granted_greater_armenia:0 "대 아르메니아령 이동되다"
+RUS_back_down_PER:0 "페르시아에서의 패배를 인정"
+RUS_greater_armenia_accept:0 "대 아르메니아"
+RUS_greater_armenia_declined:0 "대 아르메니아의 할양을 거부하다"
+RUS_granted_greater_armenia:0 "대 아르메니아의 할양을 수락하다"
 RUS_far_east_focus1:0 "극동 방향"
 RUS_far_east_focus2:0 "극동 방향"
 RUS_claimed_chinese_central_asia1:0 "중국령 중앙아시아를 주장"
@@ -95,14 +95,14 @@ RUS_ally_china_declined:0 "우리와 동맹을 맺지 않음"
 RUS_intervene_help_china:0 "도움을 제공함"
 #RUS_claim_sinkiang:0 "신장 주장" already defined in Russia foreign loc file
 JAP_abandon_transamur:0 "버림받은 트란스아무르"
-RUS_ally_japan_sakhalin_declined:0 "러시아 제안 거절"
-RUS_ally_japan_sakhalin_accept:0 "러시아 제안 수락"
+RUS_ally_japan_sakhalin_declined:0 "러시아의 제안을 거절"
+RUS_ally_japan_sakhalin_accept:0 "러시아의 제안을 수락"
 RUS_ally_japan_accept_puppets:0 "우리의 동맹"
-RUS_warning_JAP_sever1:0 "절단된 관계"
-RUS_warning_JAP_sever2:0 "절단된 관계"
+RUS_warning_JAP_sever1:0 "단교"
+RUS_warning_JAP_sever2:0 "단교"
 RUS_back_down_JAP:0 "트란스아무르에서의 패배를 인정"
-RUS_accept_lost_plebiscite_TRM:0 "잃어버린 투표권을 수락"
-RUS_keep_eye_lost_plebiscite_TRM:0 "잃어버린 투표권을 완전히 받아들이지 않았다"
+RUS_accept_lost_plebiscite_TRM:0 "재합병 국민 투표를 받아들이다"
+RUS_keep_eye_lost_plebiscite_TRM:0 "재합병 국민 투표를 거부하다"
 RUS_send_army_lost_plebiscite_TRM:0 "트란스아무르에 군대를 보내다"
 JAP_RUS_seize_transamur:0 "러시아가 트란스아무르를 점거"
 JAP_attack_RUS_seize_transamur:0 "우리와의 전쟁을 선포함"
@@ -330,8 +330,8 @@ training_barracks:0 "지역 훈련 막사"
 rus_military_infrastructure_focus:0 "군사 기반시설 개발"
 planning_school:0 "National Planning School"
 rus_army_experience_focus:0 "Initiative to the Commanders"
-general_school:0 "National High Command Formation School"
-tank_academy:0 "국립 기갑 학교"
+general_school:0 "국립 고위 사관학교"
+tank_academy:0 "국립 기갑 사관학교"
 rus_village_communes_focus:0 "마을 공동체에 의존"
 rus_local_supply_points_focus:0 "지역 보급 지점"
 rus_richer_people_focus:0 "러시아인의 풍요"
@@ -346,8 +346,8 @@ rus_great_library_focus:0 "대도서관"
 rus_moveable_feast_focus:0 "움직이는 축제"
 rus_bastion_democracy_focus:0 "민주주의의 요새"
 rus_great_works_focus:0 "거대 공공사업"
-rus_esprit_de_corps_focus:0 "Natsgvardiya"
-rus_esprit_de_corps_focus1:0 "Combat Squads at the factories"
+rus_esprit_de_corps_focus:0 "나츠그바르디야"
+rus_esprit_de_corps_focus1:0 "공장에서의 전우들"
 rus_war_industry_focus:0 "전시 산업"
 rus_autarky_focus:0 "아우타키 설립"
 rus_yunarmiya_focus:0 "유나르미야"
@@ -416,11 +416,11 @@ RUS_tsar_party_long:0 "러시아 제정연합"
 RUS_KRSKY:0 "케렌스키 대통령"
 RUS_KRSKY_desc:0 "알렉산드르 케렌스키 대통령은 두 번의 전란 속에서 우리 나라를 20년 넘게 통치해 왔습니다. 그가 그의 목숨에 대한 무수히 많은 도전들에게서 살아남았다는 것이 놀라울 뿐입니다."
 
-RUS_CON_MON:0 "입헌군주정을 설립"
+RUS_CON_MON:0 "입헌 군주정을 설립"
 RUS_CON_MON_desc:0 "차르의 전제군주정은 오랜 평화를 가져오기는커녕, 오히려 유혈 폭동과 쿠데타만을 불러오는 것으로 증명되었습니다. 러시아는 강력한 헌법에 의해 통제되는 새로운 로마노프 왕조를 세울 준비가 되었습니다."
 con_mon_tooltip:0 "§R정통성있는 차르 키릴 로마노프를 새로운 입헌군주국의 수장으로 초대할 것입니다.§! \n"
 unlock_conmon:0 "브란겔 남작이 정권을 장악했습니다 §Yor§! 드미트리 대통령이 실권자입니다 §Yor§! 밀류코프가 정부를 이끌고 있습니다 §Yor§! 체레텔리가 정부를 이끌고 있습니다"
-RUS_TSAR_KYR:0 "정통성 있는 차르를 초대"
+RUS_TSAR_KYR:0 "정통성 있는 차르를 추대"
 RUS_TSAR_KYR_desc:0 "지난 30년간의 혼란은 러시아 국민들에게 혼란스러운 선거와 공공 불안보다는 강력한 철권의 통치자가 군림하는 것이 더 나을 것이라고 느끼기에 충분했습니다. 전직 해군 장교 키릴 블라디미로비치보다 여기에 더 적절한 인물이 있을까요?"
 unlock_tsarkyr:0 "브란겔 남작이 정권을 장악했습니다 §Yor§! 드미트리 로마노프 대통령이 실권자입니다!"
 tsar_kyr_tooltip:0 "§R정통성있는 차르 키릴 로마노프를 새로운 전제군주국의 수장으로 초대할 것입니다.§! \n"
@@ -429,11 +429,11 @@ RUS_TSAR_DMI_desc:0 "로마노프 왕조는 러시아를 300년 넘게 통치해
 tsar_dmi_tooltip:0 "§R대공 드미트리 로마노프를 새로운 전제군주국의 수장으로서 제위에 앉힐 것입니다.§! \n"
 unlock_tsardmi:0 "드미트리 대통령이 실권자입니다 §Yor§! 군부가 정권을 장악했습니다!"
 
-RUS_ARI_REP:0 "귀족 공화정 설립"
+RUS_ARI_REP:0 "귀족 공화정을 설립"
 RUS_ARI_REP_desc:0 "권력은 두마(Duma)에서 상원으로 넘겨져야 합니다. 강력한 실권자의 안내 하에, 우리는 여전히 권력을 무시하려는 급진적인 움직임을 막으면서 민중의 바람에 귀을 기울일 수 있을 것입니다. 드미트리 대공보다 대통령에 적절한 인물이 있을까요?"
 ari_rep_tooltip:0 "§R드미트리를 상원 중심의 귀족 공화정의 대통령으로 유지시킬 것입니다.§! \n"
 unlock_arirep:0 "드미트리 대통령이 실권자입니다"
-RUS_DEM_REP:0 "민주 공화정 설립"
+RUS_DEM_REP:0 "민주 공화정을 설립"
 RUS_DEM_REP_desc:0 "러시아 공화국의 가장 큰 죄악은 러시아 내전 이후에 완전한 민주화를 이루어내지 못했다는 것입니다. 우리가 독재자들, 좌파, 우파 모두로부터 우리 자신을 지키기 위해서는 우리 나라와 우리의 경제 그리고 국민들을 좀 더 자유롭게 할 필요가 있습니다."
 dem_rep_tooltip:0 "§R공화국을 있는 그대로 유지하되 정치적인 자유를 허용할 것입니다.§! \n"
 unlock_demrep:0 "상원이 여전히 실권을 가지고 있습니다 §Yor§! 인민전선 정부가 정권을 장악했습니다"
@@ -542,13 +542,13 @@ RUS_WRA_ADM1:0 "페레스트로이카"
 RUS_WRA_ADM1_desc:0 "'페레스트로이카' 또는 '재건축'은 러시아의 산업, 농업, 군수 공업의 재편성을 목표로 하는 보리스 사빈코프의 새로운 경제 방침입니다. 이는 잘 짜여진 경제 계획에 기초하여, 법적으로 개인의 사업에 더 많은 자유도를 부여하는 과정이 포함됩니다. 새로운 법안이 우리 경제를 재건하는 데 도움이 될 것입니다."
 RUS_SAVI_HOG:0 "보리스 사빈코프가 영도자이다"
 RUS_WRA_ADM3:0 "MTS"
-RUS_WRA_ADM3_desc:0 "The land redistribution promised by Savinkov allowed us to fund many farms in the Central Russia. The next step is to provide our peasants with agricultural machinery. That's why we should establish machine and tractor stations (MTS), to be rural agencies that will supply farms with agricultural machinery and people to run it. Such cooperation will revive the agricultural sector in Russia."
+RUS_WRA_ADM3_desc:0 "사빈코프가 약속했던 토지 재분배는 우리가 중부 러시아의 많은 농장들에 자금을 투자할 수 있도록 해주었습니다. 다음 단계는 우리 농민들에게 농기계를 제공하는 것입니다. 그것이 바로 우리가 농기계 및 트랙터 배치장(MTS)들을 설립해야 하는 이유인데, 이 시설들은 각 농장들에 농기계들을 대여 및 공급할 국영 시설입니다. 이러한 협력은 러시아의 농업 부문을 되살리는 데 핵심적인 역할을 할 것입니다."
 RUS_WRA_IND1:0 "코르포라치야 유스포바"
-RUS_WRA_IND1_desc:0 "'Korporatsiya Yusupova' (Yusupov's Corporation), a united civil and military engineering organisation, has launched several industrial projects, which will reduce our dependence on German goods, provide our army with new arms and help us bring down unemployment. It is however necessary to provide his corporation with the legal privileges to compete with foreign factories."
+RUS_WRA_IND1_desc:0 "민군 복합 공학연구 조직인 '코르포라치야 유스포바'(유스포프 기업체)는 독일제 상품에 대한 우리의 의존도를 줄이고, 우리 군에 새로운 무기를 공급하며, 실업률을 낮추기 위한 몇 가지 산업 프로젝트를 시작했습니다. 그러나 해외 산업체들과 경쟁하기 위해서는 이 회사에 법적인 특권을 제공하는 것이 필요합니다."
 RUS_WRA_IND2:0 "ZIR"
-RUS_WRA_IND2_desc:0 "'Zavod imeni Ryabushinskogo' or just 'ZIR' ('Ryabushinsky Plant') was founded in 1916 in Moscow and produced 1.5 tonne trucks for the Russian Army. We should expand this factory, as the reorganisation of our industry and agriculture can't be executed without cheap, modern trucks. These workplaces with decent salary will allow us to reduce unemployment in Moscow."
-RUS_WRA_NG1:0 "파티 랜드"
-RUS_WRA_NG1_desc:0 "As the Vozhd of the Peasants, Savinkov has promised that the Russian peasants will get more agricultural lands. Now he can finally fulfil his promises. The NRPR has concluded an agreement with landowners who support our party - they will sell their lands to us, but will get a rent from the peasants for 5 years. Even if the peasants can't pay their rent, our party will compensate the landowners."
+RUS_WRA_IND2_desc:0 "'자보드 이메니 랴부쉰스코고'(랴부쉰스키 공장), 또는 간단히 'ZIR'는 1916년 모스크바에서 설립되었고, 러시아군의 군용 1.5톤 트럭을 생산해왔습니다. 우리의 산업과 농업의 재편성은 저렴하고 현대적인 트럭 없이는 실행될 수 없기에, 우리는 이 공장을 확장해야 합니다. 급여가 좋은 이 일자리들은 우리가 모스크바의 실업률을 줄일 수 있게 해줄 테니 일석이조입니다."
+RUS_WRA_NG1:0 "당이 소유한 토지"
+RUS_WRA_NG1_desc:0 "농민들의 영도자로서, 사빈코프는 러시아 농민들이 더 많은 농지를 갖게 될 것이라고 약속했고, 이제 그는 마침내 그의 약속을 지킬 수 있게 되었습니다. NRPR은 우리 당을 지지하는 지주들과 계약을 맺었습니다. 그들은 본인 소유의 토지를 우리에게 매각하는 대신, 직후 5년간 농민들로부터 소작료를 받을 것입니다. 농민들이 소작료를 낼 수 없는 일이 생겨도, 우리 당에서 토지 소유자들에게 대신 보상할 것이니 문제 없습니다."
 RUS_WRA_LA1:0 "노동군"
 RUS_WRA_LA1_desc:0 "우리 군인들이 모두 자원해서 입대한 것은 아니지만, 국가를 위해 봉사하는 다른 방법들 역시 있습니다. 중부 러시아의 기반시설을 재건하기 위해 '노동군' 개념이 SPC에 제안되었습니다. 노동자들은 일정한 임금을 항시 보장받게 되지만, 최소한 6개월은 반드시 일해야만 합니다. 이 정책은 러시아가 외세의 경제 침탈로부터 스스로를 보호하도록 할 것입니다."
 RUS_WRA_POL1:0 "중앙화된 권력 기관"
@@ -561,13 +561,13 @@ RUS_WRA_POL4:0 "새로운 러시아"
 RUS_WRA_POL4_desc:0 "보리스 사빈코프는 전 세계가 의식할 강대한 러시아를 건설하겠다고 선언했습니다. 하지만 새로운 국가는 새로운 사회를 필요로 합니다: 용기와 건강, 그리고 노동은 우리의 원칙이 될 것이며, 영도자는 이 어려운 시기를 이겨낼 수 있는 국가를 이끌어갈 유일한 인물로서 모두에게 존경받을 것입니다."
 
 RUS_stratocrat:0 "군사 정부"
-RUS_stratocrat_desc:0 "The Kerensky governments chronic incapacity to rule proved itself dangerous for Russia. To secure our power proven officers will have to take up important offices of the administration. Only that way we'll enjoy a competent public service."
+RUS_stratocrat_desc:0 "케렌스키 정부는 정권의 고질적인 무능함이 러시아에 지극히 위험한 것임을 몸소 증명했습니다. 행정부의 주요 직책은 군부의 입증을 받은 장교들이 맡아야 합니다. 그렇게 해야만 우리는 행정부가 제대로 돌아가는 모습을 볼 수 있을 테니까요."
 RUS_military_spirit:0 "군사 정신"
-RUS_military_spirit_desc:0 "The post-war young generation is told to be "lost", lacking of any goal, any vision of future. The army is the only obstacle on the path leading to chaos and disintegration of Russia, they shall take up the education of our youth and soon the education of the whole country. A military spirit can only benefit the Motherland."
+RUS_military_spirit_desc:0 "세계 대전 이후의 청년 세대는 삶의 목표도, 미래에 대한 비전도 "결여"되었습니다. 오직 군대만이 러시아의 혼란과 붕괴를 막아낼 수 있습니다. 우리 청년들의 교육은 앞으로 군대가 맡을 것이며, 뿐만아니라 곧 온 나라가 군대에게 교육받게 될 것입니다. 군사 정신이 조국에 주는 것은 이익밖에 없습니다."
 RUS_legacy_whites:0 "백군의 유산"
-RUS_legacy_whites_desc:0 "The White generals defeated the Bolsheviks more than 15 years ago and brought peace and prosperity in the country. The White knights shall be honoured as the heroes of Russia."
-RUS_state_revanchism:0 "국가 혁명"
-RUS_state_revanchism_desc:0 "Now that Russia has stabilised and grown stronger under the rule of her army she must now grow, we must reclaim the land that has been stolen to us and liberate their peoples that are chanting for our return!"
+RUS_legacy_whites_desc:0 "백군은 15년 전 볼셰비키 정권을 물리치고 국가의 평화와 번영을 가져왔습니다. 이 흰 기사들은 앞으로도 러시아의 영웅으로 칭송받을 것입니다."
+RUS_state_revanchism:0 "국가 보복주의"
+RUS_state_revanchism_desc:0 "러시아는 군부의 훌륭한 통치 하에서 안정되고 더 강해졌으니, 이제 우리가 도둑맞은 영토들을 되찾고 우리의 귀환을 외치는 그들의 국민들을 해방시켜야만 합니다!"
 
 RUS_more_resources:0 "자원 계획"
 RUS_more_resources_desc:0 "Minerals are numerous in Russia and can boost the economy rapidly. That's why we have to initiate an extraction of the various minerals in the whole country."
@@ -585,15 +585,15 @@ RUS_tech_slot_desc:0 "With our heavy investment in our industry and economy, we 
 
 RUS_OKHRANA:0 "오흐란카 재도입"
 RUS_OKHRANA_desc:0 "러시아 전역에서 혁명의 분위기가 고조되면서, 두마의 일부 구성원들은 옛 제국 시절의 비밀 경찰인 '오흐란노예 오트델레니예', 또는 '오흐란카'를 바탕으로 국내 경찰의 완전한 재편성을 제안하고 있습니다. 이 조직은 극단적인 혁명분자를 찾아내어 그들이 러시아 국가를 존중할 수 있도록 '재교육'해줄 것입니다!"
-RUS_expand_intel:0 "기계 전쟁"
-RUS_expand_intel_desc:0 "Modern wars are only partially won on the battlefield. Equally important are the men and women behind desks and radios, dealing with intelligence and transmissions. We need to make their work easier."
+RUS_expand_intel:0 "정보부 확장"
+RUS_expand_intel_desc:0 "현대전이라는 개념에서 전장에서의 승리는 그저 한 부분일 뿐입니다. 책상과 라디오 뒤에서 전보를 보내는 이들도 만만찮게 중요합니다. 우리는 그들의 업무를 더 수월하게 만들어줄 필요가 있습니다."
 RUS_okhrana_div:0 "정치장교"
 RUS_okhrana_div_desc:0 "위험한 혁명 분자들이 군을 선동하는 것을 막기 위해 오흐란카가 우리 군 최고 사령부 곳곳에 배치되었습니다. 우리는 옛날과 같은 일이 다시 일어나기를 원치 않습니다."
 okhrana_div:0 "§G10%의 사단 회복률§!을 제공합니다"
 
 can_only_have_one_reform:0 "§G육군 개혁 계획은 단 하나만 택할 수 있습니다. 현명하게 선택하세요!§!"
 RUS_reform_denikin:0 "육군 개혁: 데니킨의 계획"
-RUS_reform_denikin_desc:0 "Field marshal Denikin is popular with the politicians and most of our officer corps. To go through with his plans for the army would be an easy affair. He suggests that Russia should rely on our huge numbers to win any future wars, but also insists that a motorisation of our forces is necessary."
+RUS_reform_denikin_desc:0 "데니킨 원수는 정치인들 그리고 대부분의 장교들에게 인기있습니다. 그가 주장하는 육군 개혁은 어려운 일이 아닙니다. 그는 러시아가 미래의 전장에서 승리를 거두기 위해서는 우리 군대의 거대한 규모에 계속 의존해야 하며, 동시에 우리 군대의 기계화 역시 필요하다고 주장합니다."
 RUS_more_MP:0 "대중 동원"
 RUS_more_MP_desc:0 "Denikin, wise from the experience of the Weltkrieg, knows that the Russian army is unstoppable once the numbers are provided. It's time we provide them with a new recruitment programme."
 RUS_infantry_tech:0 "육군 현대화"
@@ -657,7 +657,7 @@ can_only_have_one_reform_navy:0 "§G해군을 개혁하기 위한 계획들 중 
 RUS_reform_wiren:0 "해군 개혁: 콜로메이체프의 계획"
 RUS_reform_wiren_desc:0 "니콜라이 콜로메이체프는 북극 탐험가이자 구 제국 해군의 장교입니다. 그가 주요 해전에 참전해 경험을 쌓고 로제스트벤스키 제독의 생명을 구해 영웅이자 전설로 거듭난 러일전쟁 이후로, 그는 잘 잡힌 규율과 장엄한 드레드노트들의 위력을 굳건히 신뢰합니다."
 RUS_reform_berens:0 "해군 개혁: 베렌스의 계획"
-RUS_reform_berens_desc:0 "브랑겔의 친구이기도 한 미하일 베렌스는 그가 캐나다 자치령을 방문한 이후 본인이 보게 된 항공모함과 해전의 미래에 대해 줄곧 말해왔습니다. 그는 세계 대전기의 해전은 드레드노트가 지배했을지라도, 드레드노트의 시대 역시 언젠가는 거대한 항공모함과 해군 폭격기의 위력에 의해 역사 속으로 사라져버릴 것이라 주장합니다."
+RUS_reform_berens_desc:0 "브란겔의 친구이기도 한 미하일 베렌스는 그가 캐나다 자치령을 방문한 이후 본인이 보게 된 항공모함과 해전의 미래에 대해 줄곧 말해왔습니다. 그는 세계 대전기의 해전은 드레드노트가 지배했을지라도, 드레드노트의 시대 역시 언젠가는 거대한 항공모함과 해군 폭격기의 위력에 의해 역사 속으로 사라져버릴 것이라 주장합니다."
 RUS_reform_bostrem:0 "해군 개혁: 모나스티레프의 계획"
 RUS_reform_bostrem_desc:0 "네스토르 모나스티레프는 베렌스와 콜로메이체프의 계획이 모두 거창하지만 현실적이지 않다고 주장합니다. 대규모 해군을 건설하는 것은 비용이 많이 들고, 러시아에는 그만한 규모의 함대를 생산할 수 있는 장비도 없습니다. 대신에 우리는 적들의 수송 효율을 저해하기 위해 저렴하지만 동시에 치명적인 잠수함들에게 초점을 맞추어야 한다는 것입니다."
 RUS_dockyards:0 "새로운 조선소 건설"
