--- a/Kaiserreich Korean Translation/localisation/KR_Commune_of_France_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Commune_of_France_l_english.yml
@@ -563,9 +563,9 @@ comfrance.18.a:0 "우리 시대의 돔브로프스키, 마흐노를 선택한다
 comfrance.18.b:0 "포르 동지는 지금까지 직무를 훌륭히 수행해냈다!"
 
 comfrance.19.t:0 "세바스티앙 포르 사퇴"
-comfrance.19.d:0 "노동 총위원회에서 공안위원회의 새로운 창단식을 거행할 동안 노동 총위원회의 의장인 세바스티앙 포르는 자신이 사임을 할 것이라고 발표했는데, 많은 사람들이 코뮌의 행정부 내 부서의 분쟁(Faure는 무정부주의자이다.) 정치 위기의 주요 원인이라고 생각했습니다. 그의 후임이 될 수 있는 두 유명인은 노동 조합원 레옹 주오와 내전에서의 베테랑 베누아 프라숑입니다."
+comfrance.19.d:0 "노동 총위원회에서 공안위원회의 새로운 창단식을 거행할 동안 노동 총위원회의 의장인 세바스티앙 포르는 자신이 사임을 할 것이라고 발표했는데, 많은 사람들이 코뮌의 행정부 내 부서의 분쟁(포르는 무정부주의자이다.) 정치 위기의 주요 원인이라고 생각했습니다. 그의 후임이 될 수 있는 두 유명인은 노동 조합원 레옹 주오와 내전에서의 베테랑 브누아 프라숑입니다."
 comfrance.19.a:0 "레옹 주오가 노동 총위원회의 의장이 될것이다."
-comfrance.19.b:0 "베누아 프라숑이 노동 총위원회의 의장이 될것이다."
+comfrance.19.b:0 "브누아 프라숑이 노동 총위원회의 의장이 될것이다."
 
 comfrance.20.t:0 "선거에서 아무도 과반수를 차지하지 못하다"
 comfrance.20.d:0 "3일에 걸친 검증 이후, 결과가 공표되었습니다. 최근의 선거에서 확고한 과반수는 없었습니다. 노동 총위원회의 의장인 세바스티앙 포르는 자코뱅파와 소렐주의파 간의 내부적인 싸움을 피하기 위해, 그와 의회가 타협 내각을 이끌 새로운 의장을 선출하겠다고 밝혔습니다."
@@ -720,12 +720,12 @@ comfrance.50.a:0 "라틴 아메리카에 생디칼리즘을 촉진시키자"
 comfrance.50.b:0 "다른 어딘가에 생디칼리즘을 먼저 전파해야 한다"
 
 comfrance.51.t:0 "세계 혁명에서의 여성의 역할"
-comfrance.51.d:0 "어제 헬렌 크로퍼드는 세계 혁명에서의 여성의 역할에 대한 멋진 연설로 무대에 올랐습니다. 그녀의 주장에 따르면, 여성이 산업과 군대에 참여하지 않는다면 프롤레타리아의 많은 적들을 물리 칠 수 없을 것입니다. 유감스럽게도 영국의 정치 환경은 그러한 결정에 대한 준비가 되어 있지 않습니다. 그러나 이 요청을 수락하는 것은 사회의 보수적인 요소들 사이에 약간의 교란을 야기 할 수있습니다."
+comfrance.51.d:0 "어제 헬렌 크로퍼드는 세계 혁명에서의 여성의 역할에 대한 멋진 연설로 무대에 올랐습니다. 그녀의 주장에 따르면, 여성이 산업과 군대에 참여하지 않는다면 프롤레타리아의 많은 적들을 물리 칠 수 없을 것입니다. 유감스럽게도 코뮌의 정치 환경은 그러한 결정에 대한 준비가 되어 있지 않습니다. 그러나 이 요청을 수락하는 것은 사회의 보수적인 요소들 사이에 약간의 교란을 야기 할 수있습니다."
 comfrance.51.a:0 "여성의 노동 참여는 세계 혁명에 필수적이다"
 comfrance.51.b:0 "공장의 여성? 그들을 당장 부엌으로 돌려보내라!"
 
 comfrance.52.t:0 "세계 혁명에서의 여성의 역할"
-comfrance.52.d:0 "어제 헬렌 크로퍼드는 세계 혁명에서의 여성의 역할에 대한 멋진 연설로 무대에 올랐습니다. 그녀의 주장에 따르면, 여성이 산업과 군대에 참여하지 않는다면 프롤레타이의 많은 적들을 물리 칠 수 없을 것입니다. 유감스럽게도 영국의 정치 환경은 그러한 결정에 대한 준비가되어 있지 않습니다. 우리는 가을에 노조 의회가 그 문제를 직면할 때까지 기다릴 필요가 있습니다."
+comfrance.52.d:0 "어제 헬렌 크로퍼드는 세계 혁명에서의 여성의 역할에 대한 멋진 연설로 무대에 올랐습니다. 그녀의 주장에 따르면, 여성이 산업과 군대에 참여하지 않는다면 프롤레타리아의 많은 적들을 물리 칠 수 없을 것입니다. 유감스럽게도 영국의 정치 환경은 그러한 결정에 대한 준비가 되어 있지 않습니다. 우리는 가을에 노조 의회가 그 문제를 직면할 때까지 기다릴 필요가 있습니다."
 comfrance.52.a:0 "그래"
 
 comfrance.53.t:0 "프랑스 코뮌에 리소지멘토 지원을 요구"
