--- a/Kaiserreich Korean Translation/localisation/KR_State_Names_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_State_Names_l_english.yml
@@ -562,7 +562,7 @@ l_english:
  STATE_560:0 "니콜라옙스크"
  STATE_561:0 "아무르"
  STATE_562:0 "오호츠크"
- STATE_563:0 "지타"
+ STATE_563:0 "치타"
  STATE_564:0 "베르흐네우딘스크"
  STATE_565:0 "보다이보"
  STATE_566:0 "이르쿠츠크"
@@ -947,7 +947,7 @@ l_english:
  STATE_945:0 "북부 케이프"
  STATE_946:0 "동부 케이프"
  STATE_947:0 "오라녜-프리슈타트"
- STATE_948:0 "느고마"
+ STATE_948:0 "응고마"
  STATE_949:0 "마니에마"
  STATE_950:0 "이냠바느-가자"
  STATE_951:0 "마빙가"
