--- a/Kaiserreich Korean Translation/localisation/KR_Commune_of_France_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Commune_of_France_l_english.yml
@@ -964,7 +964,7 @@ comfrance.108.d:0 "브리튼 연방은 우리를 돕기로 결정하였습니다
 comfrance.108.a:0 "멋지군!"
 
 comfrance.10800.t:0 "브리튼의 지원이 도착하다"
-comfrance.10800.d:0 "브리튼이 약속한 지원가 드디어 도착했습니다. 가장 현대적이고 효과적인 모델은 아닌 소총이지만, 그것에 상관없이 우리는 잘 사용할 수 있습니다."
+comfrance.10800.d:0 "브리튼이 약속한 지원 드디어 도착했습니다. 가장 현대적이고 효과적인 모델은 아닌 소총이지만, 그것에 상관없이 우리는 잘 사용할 수 있습니다."
 comfrance.10800.a:0 "우리는 이것을 잘 활용할 것이다."
 
 comfrance.109.t:0 "프랑스가 지원 요청을 수락하다!"
