--- a/Kaiserreich Korean Translation/localisation/KR_Greece_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Greece_l_english.yml
@@ -23,24 +23,24 @@ GRE_national_populist_party:0 "민족 그리스 군단"
 GRE_national_populist_party_long:0 "민족 그리스 군단"
 
 ### Ideas ###
-GRE_legacy_of_alexander_idea:0 "알렉산더의 유산"
+GRE_legacy_of_alexander_idea:0 "알렉산드로스의 유산"
 GRE_legacy_of_alexander_idea_desc:0 "그리스 시민들은 전쟁에 익숙합니다. 그리고 그 어떠한 것도 그들이 힘들게 이룩한 독립을 다시 뒤집을 수 없을 것입니다."
-GRE_legacy_of_alexander2_idea:0 "알렉산더의 유산"
+GRE_legacy_of_alexander2_idea:0 "알렉산드로스의 유산"
 GRE_legacy_of_alexander2_idea_desc:0 "그리스 시민들은 전쟁에 익숙합니다. 그리고 그 어떠한 것도 그들이 힘들게 이룩한 독립을 다시 뒤집을 수 없을 것입니다.."
 GRE_memories_of_king:0 "왕에 대한 기억"
 GRE_memories_of_king_desc:0 "그리스 왕정이 10년간의 군부 독재가 종식된 이후 폐지되었지만, 우리 국민 사이에서는 군주제를 그리워하는 사람들이 존재하며, 이들이 우리 국가의 불안을 유발 시킬 수 있을 것입니다."
 GRE_foreign_industry_GER1:0 "독일에 의해 장악된 산업"
-GRE_foreign_industry_GER1_desc:0 "처참한 1차 대전의 종료 이후 만들어진 믿겨지지 않는 전쟁 부채 덕분에, 콘스탄틴 왕은 독일인 투자자들이 규제 없이 그리스 경제에 접근하는 것을 허용 할 수밖에 없었습니다. 그 결과, 우리 산업의 절반 정도를 외국인 투자자와 은행의 소유로 넘어갔으며, 그들에게는 그리스의 이익은 안중에도 없습니다."
+GRE_foreign_industry_GER1_desc:0 "처참한 1차 대전의 종료 이후 만들어진 믿겨지지 않는 전쟁 부채 덕분에, 콘스탄티노스 왕은 독일인 투자자들이 규제 없이 그리스 경제에 접근하는 것을 허용 할 수밖에 없었습니다. 그 결과, 우리 산업의 절반 정도를 외국인 투자자와 은행의 소유로 넘어갔으며, 그들에게는 그리스의 이익은 안중에도 없습니다."
 GRE_foreign_industry_GER2:0 "독일에 의해 부분적으로 장악된 산업"
-GRE_foreign_industry_GER2_desc:0 "처참한 1차 대전의 종료 이후 만들어진 믿겨지지 않는 전쟁 부채 덕분에, 콘스탄틴 왕은 독일인 투자자들이 규제 없이 그리스 경제에 접근하는 것을 허용 할 수밖에 없었습니다. 그 결과, 우리 산업의 사분의 일 정도를 외국인 투자자와 은행의 소유로 넘어갔으며, 그들에게는 그리스의 이익은 안중에도 없습니다."
+GRE_foreign_industry_GER2_desc:0 "처참한 1차 대전의 종료 이후 만들어진 믿겨지지 않는 전쟁 부채 덕분에, 콘스탄티노스 왕은 독일인 투자자들이 규제 없이 그리스 경제에 접근하는 것을 허용 할 수밖에 없었습니다. 그 결과, 우리 산업의 사분의 일 정도를 외국인 투자자와 은행의 소유로 넘어갔으며, 그들에게는 그리스의 이익은 안중에도 없습니다."
 GRE_foreign_industry_GER3:0 "구제금융 받은 독일에 의해 장악된 산업"
-GRE_foreign_industry_GER3_desc:0 "처참한 1차 대전의 종료 이후 만들어진 믿겨지지 않는 전쟁 부채 덕분에, 콘스탄틴 왕은 독일인 투자자들이 규제 없이 그리스 경제에 접근하는 것을 허용 할 수밖에 없었습니다. 그 결과, 우리 산업의 사분의 일 정도를 외국인 투자자와 은행의 소유로 넘어갔습니다. 다행이게도 검은 월요일 위키 동안 우리가 그러한 산업을 구제함으로써 그들과 좀 더 나은 관계를 맺을 수 있었지만요."
+GRE_foreign_industry_GER3_desc:0 "처참한 1차 대전의 종료 이후 만들어진 믿겨지지 않는 전쟁 부채 덕분에, 콘스탄티노스 왕은 독일인 투자자들이 규제 없이 그리스 경제에 접근하는 것을 허용 할 수밖에 없었습니다. 그 결과, 우리 산업의 사분의 일 정도를 외국인 투자자와 은행의 소유로 넘어갔습니다. 다행이게도 검은 월요일 위키 동안 우리가 그러한 산업을 구제함으로써 그들과 좀 더 나은 관계를 맺을 수 있었지만요."
 GRE_foreign_industry_AUS1:0 "오스트리아에 의해 장악된 산업"
-GRE_foreign_industry_AUS1_desc:0 "처참한 1차 대전의 종료 이후 만들어진 믿겨지지 않는 전쟁 부채 덕분에, 콘스탄틴 왕은 독일인 투자자들이 규제 없이 그리스 경제에 접근하는 것을 허용 할 수밖에 없었습니다. 그 결과, 우리 산업의 절반 정도를 외국인 투자자와 은행의 소유로 넘어갔으며, 그들에게는 그리스의 이익은 안중에도 없습니다."
+GRE_foreign_industry_AUS1_desc:0 "처참한 1차 대전의 종료 이후 만들어진 믿겨지지 않는 전쟁 부채 덕분에, 콘스탄티노스 왕은 독일인 투자자들이 규제 없이 그리스 경제에 접근하는 것을 허용 할 수밖에 없었습니다. 그 결과, 우리 산업의 절반 정도를 외국인 투자자와 은행의 소유로 넘어갔으며, 그들에게는 그리스의 이익은 안중에도 없습니다."
 GRE_foreign_industry_AUS2:0 "오스트리아에 의해 부분적으로 장악된 산업"
-GRE_foreign_industry_AUS2_desc:0 "처참한 1차 대전의 종료 이후 만들어진 믿겨지지 않는 전쟁 부채 덕분에, 콘스탄틴 왕은 독일인 투자자들이 규제 없이 그리스 경제에 접근하는 것을 허용 할 수밖에 없었습니다. 그 결과, 우리 산업의 사분의 일 정도를 외국인 투자자와 은행의 소유로 넘어갔으며, 그들에게는 그리스의 이익은 안중에도 없습니다."
+GRE_foreign_industry_AUS2_desc:0 "처참한 1차 대전의 종료 이후 만들어진 믿겨지지 않는 전쟁 부채 덕분에, 콘스탄티노스 왕은 독일인 투자자들이 규제 없이 그리스 경제에 접근하는 것을 허용 할 수밖에 없었습니다. 그 결과, 우리 산업의 사분의 일 정도를 외국인 투자자와 은행의 소유로 넘어갔으며, 그들에게는 그리스의 이익은 안중에도 없습니다."
 GRE_foreign_industry_AUS3:0 "오스트리아 산업체 구제"
-GRE_foreign_industry_AUS3_desc:0 "처참한 1차 대전의 종료 이후 만들어진 믿겨지지 않는 전쟁 부채 덕분에, 콘스탄틴 왕은 독일인 투자자들이 규제 없이 그리스 경제에 접근하는 것을 허용 할 수밖에 없었습니다. 그 결과, 우리 산업의 사분의 일 정도를 외국인 투자자와 은행의 소유로 넘어갔습니다. 다행이게도 검은 월요일 위키 동안 우리가 그러한 산업을 구제함으로써 그들과 좀 더 나은 관계를 맺을 수 있었지만요."
+GRE_foreign_industry_AUS3_desc:0 "처참한 1차 대전의 종료 이후 만들어진 믿겨지지 않는 전쟁 부채 덕분에, 콘스탄티노스 왕은 독일인 투자자들이 규제 없이 그리스 경제에 접근하는 것을 허용 할 수밖에 없었습니다. 그 결과, 우리 산업의 사분의 일 정도를 외국인 투자자와 은행의 소유로 넘어갔습니다. 다행이게도 검은 월요일 위키 동안 우리가 그러한 산업을 구제함으로써 그들과 좀 더 나은 관계를 맺을 수 있었지만요."
 GRE_black_monday_1:0 "검은 월요일의 파장"
 GRE_black_monday_2:0 "검은 월요일로부터 회복 중"
 GRE_black_monday_3:0 "검은 월요일로부터 거의 다 회복"
@@ -111,9 +111,9 @@ GRE_republic_guaranteed:0 "The chances of the republicans winning the referendum
 GRE_monarchy_likely:0 "The chances of the monarchists winning the referendum is considered §Ylikely§!\n"
 GRE_republic_likely:0 "The chances of the republicans winning the referendum is considered §Ylikely§!\n"
 GRE_referendum_close:0 "The chance of either side winning the referendum is §Ytoo close to call§!\n"
-GRE_alexander_becomes_king:0 "알렉산더가 알렉산더 1세로써 그리스의 왕이 되다.\n""
-GRE_george_becomes_king:0 "조지가 조지 2세로써 그리스의 왕이 되다.\n"
-GRE_paul_becomes_king:0 "파울이 바오르 1세로써 그리스의 왕이 되다.\n"
+GRE_alexander_becomes_king:0 "알렉산드로스가 알렉산드로스 1세로써 그리스의 왕이 되다.\n""
+GRE_george_becomes_king:0 "조지가 요르요스 2세로써 그리스의 왕이 되다.\n"
+GRE_paul_becomes_king:0 "파블로스가 바오르 1세로써 그리스의 왕이 되다.\n"
 GRE_marine_spawn:0 "A unit of §Ymarines§! will spawn in the capital state\n"
 GRE_mountaineer_spawn:0 "A unit of §Ymountaineers§! will spawn in the capital state\n"
 GRE_no_black_monday_effect:0 "검은 월요일로부터 더 이상 고통 받지 않을 것입니다."
@@ -189,13 +189,13 @@ GRE_balkan_democracy_desc:0 "그리스는 발칸에서 민주주의의 상징입
 GRE_monarchist_victory:0 "군주주의의 승리"
 GRE_monarchist_victory_desc:0 "왕정이 복원되었습니다. 그리고 오늘의 문제 역시 해결되었습니다. 물론 지금 새로운 논의가 이루어지고 있습니다. 추방된 전 왕인 젊은 알렉산드로스를 복귀 시킬 것인가 혹은 알렉산더보다 왕위 계승 서열은 높지만, 아버지와 같이 추방된 늙은 게오르기오스인가에 대해서 말입니다."
 GRE_king_alexandros:0 "알렉산드로스 왕"
-GRE_king_alexandros_desc:0 "1917에 처음 왕위에 올라서 후에 추방된 알렉산더 왕이 왕좌로 돌아왔습니다. 그는 형식상 왕위에 익숙해있고, 그는 자신의 권한을 최소한으로 하는 입헌군주제를 동의하고 있습니다."
+GRE_king_alexandros_desc:0 "1917에 처음 왕위에 올라서 후에 추방된 알렉산드로스 왕이 왕좌로 돌아왔습니다. 그는 형식상 왕위에 익숙해있고, 그는 자신의 권한을 최소한으로 하는 입헌군주제를 동의하고 있습니다."
 GRE_republican_question:0 "잔존하는 공화주의자들"
 GRE_republican_question_desc:0 "왕이 왕좌로 되돌아왔지만, 그의 반대하고 공화국을 선호하는 사람들이 남아있습니다. 왕은 그들에게 호의를 줄 수 있지만, 미래의 쿠데타의 가능성을 배제 할 수 없습니다."
 GRE_empower_the_throne:0 "왕좌 강화"
-GRE_empower_the_throne_desc:0 "알렉산더는 그의 망명 생활 중 한 두 가지 배운 것이 있습니다. 그래서 그는 자신의 의지를 의회에게 좀 더 강요하기를 원합니다. 적어도 필요하다면 의회에서 선출된 지도자를 바꾸는 것 같이 말입니다. 확실한 것은 이렇게 바뀐다면 그는 단순한 상징은 아니게 되겠습니다."
+GRE_empower_the_throne_desc:0 "알렉산드로스는 그의 망명 생활 중 한 두 가지 배운 것이 있습니다. 그래서 그는 자신의 의지를 의회에게 좀 더 강요하기를 원합니다. 적어도 필요하다면 의회에서 선출된 지도자를 바꾸는 것 같이 말입니다. 확실한 것은 이렇게 바뀐다면 그는 단순한 상징은 아니게 되겠습니다."
 GRE_king_georgios:0 "게오르기오스 왕"
-GRE_king_georgios_desc:0 "어릴 때부터 군에서 경험을 쌓은 조지 왕자는 왕 콘스탄틴의 장남이자 독일처럼 강력한 군주제를 꿈꾸고 있습니다. 그의 생각대로라면 왕은 반드시 의회의 힘을 무시할 정도의 권력을 가져야 합니다."
+GRE_king_georgios_desc:0 "어릴 때부터 군에서 경험을 쌓은 요르요스 왕자는 왕 콘스탄틴의 장남이자 독일처럼 강력한 군주제를 꿈꾸고 있습니다. 그의 생각대로라면 왕은 반드시 의회의 힘을 무시할 정도의 권력을 가져야 합니다."
 GRE_purge_republicans:0 "공화주의자 숙청"
 GRE_purge_republicans_desc:0 "새로운 왕이 왕좌에 올랐고, 그의 소원은 이루어졌습니다. 그러나 정부와 그의 군대에서 남아있는 공화주의자들은 숙청해야 한다고 봅니다. 적어도 국가를 혼란 속으로 밀어넣지 못할 만큼은 말입니다."
 GRE_guide_parliament:0 "의회 지도"
